# autumn

./: .env  Cargo.toml
ai_func_proc_macro/: Cargo.toml
ai_func_proc_macro/src/: lib.rs
src/: main.rs
src/agents/: mod.rs
src/agents/agent_architect/: architect_agent.rs  mod.rs
src/agents/agent_backend/: backend_agent.rs  mod.rs
src/agents/agent_manager/: manager_agent.rs  mod.rs
src/agents/base/: agent_base.rs  agent_traits.rs  mod.rs
src/ai_functions/: ai_functions.rs
src/models/general/: llm.rs
src/utils/: command_line.rs  eleven_lab_tts.rs  general.rs  llm_apis.rs  mod.rs
